--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -9,3 +9,9 @@
   text-decoration: none;
   transition: opacity 0.3s linear;
 }
+
+@media (max-width: 450px) {
+  .header__link {
+    display: none;
+  }
+}
