--- a/src/blocks/header/__text/header__text.css
+++ b/src/blocks/header/__text/header__text.css
@@ -5,11 +5,18 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
+  margin-right: 24px;
 }
 
 @media screen and (min-width: 768px) {
   .header__text {
     font-size: 18px;
     line-height: 22px;
+  }
+}
+
+@media (max-width: 450px) {
+  .header__text {
+    display: none;
   }
 }
