--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,21 +1,39 @@
 .header {
-  /* width: 880px;
-  height: 74px;
-  margin: 45px auto 40px;
-  border-bottom: 1px solid rgba(84, 84, 84, 0.7); */
   border-bottom: 1px solid #545454;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  max-width: 100%;
-  padding-bottom: 32px;
+  max-width: 880px;
+  padding-bottom: 43px;
+  margin: auto;
+  padding-top: 45px;
 }
 
 @media screen and (max-width: 1040px) {
   .header {
-    /* width: 320px; */
     height: 56px;
     margin-top: 28px;
     padding: 0;
   }
+}
+
+/* @media screen and (max-width: 700px) {
+  .header {
+    width: calc(100% - 38px);
+  }
+} */
+
+/* @media screen and (max-width: 450px) {
+  .header {
+    min-height: 85px;
+  }
+} */
+
+.header__menu-items {
+  display: none;
+}
+
+.header__burger.active + .header__menu-items {
+  display: flex;
+  flex-direction: column;
 }
