--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
   align-items: center;
   min-width: 282px;
-  padding: 40px 50px 0;
+  padding-top: 37px;
 }
 
 @media screen and (max-width: 1040px) {
@@ -21,6 +21,5 @@
 @media screen and (max-width: 320px) {
   .profile {
     max-width: 282px;
-    margin-top: 42px;
   }
 }
