--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
 @import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/header/__authorization/header__authorization.css);
 @import url(./blocks/header/__text/header__text.css);
+@import url(./blocks/header/__menu/header__menu.css);
+@import url(./blocks/header/__burger/header__burger.css);
+@import url(./blocks/header/__burger-line/header__burger-line.css);
+@import url(./blocks/header/__menu-items/header__menu-items.css);
 
 /*page*/
 @import url(./blocks/page/page.css);
